--- a/core/static/style.css
+++ b/core/static/style.css
@@ -42,6 +42,7 @@ header .filter{
 
 header label{
     margin-left:1em;
+    vertical-align: bottom;
 }
 
 /*=============== main ================*/
@@ -89,6 +90,7 @@ header label{
 
 .main .methods{
     margin-right:2em;
+    text-transform:uppercase;
 }
 
 .main .request-type{
