--- a/core/static/style.css
+++ b/core/static/style.css
@@ -10,6 +10,19 @@ a{
     color:#3b8bba;
 }
 
+p{
+    margin:0.5em 0em;
+}
+
+ul{
+    margin:0.5em 0em;
+    padding:0em 1.5em;
+}
+
+ul li{
+    margin:0.2em;
+}
+
 .fl{
     float:left;
 }
@@ -84,8 +97,8 @@ header label{
     padding-bottom:0.2em;
 }
 
-.main .version{
-    margin-right:1em;
+.main h5{
+    margin:1em 0em;
 }
 
 .main .methods{
@@ -93,25 +106,25 @@ header label{
     text-transform:uppercase;
 }
 
-.main .request-type{
-    margin-left:2em;
+.main .param-name{
+    min-width:7em;
+    display:inline-block;
 }
 
-.main table caption{
-    text-align:left;
-}
-.main table thead th{
-    background-color:#fafafa;
-    border:1px solid #eee;
-    text-align:left;
-    padding:0.2em;
+.main .param-type{
+    min-width:5em;
+    display:inline-block;
 }
 
-.main table td{
-    border:1px solid #eee;
-    padding:0.2em;
+.main .header-key{
+    min-width:15em;
+    display:inline-block;
 }
 
+.main .status-code{
+    min-width:6em;
+    display:inline-block;
+}
 
 /*=============== footer ================*/
 footer{
