优化界面显示
添加info用于管理页首页脚的信息显示

--- a/core/static/style.css
+++ b/core/static/style.css
@@ -53,6 +53,10 @@ header .filter{
     margin-top:0.8em;
 }
 
+header #groups{
+    margin-left:20%;
+}
+
 header label{
     margin-left:1em;
     vertical-align: bottom;
