将apiMethods改为apiMethod，不允许在同一个api文档中指定多个method

--- a/core/static/style.css
+++ b/core/static/style.css
@@ -114,7 +114,7 @@ header label{
     margin:1em 0em;
 }
 
-.main .methods{
+.main .method{
     margin-right:2em;
     text-transform:uppercase;
 }
