修正标签匹配模式 现在只要标签名后面出现空白字符就行，而不像之前一样必须有一个空格

--- a/output/static/style.css
+++ b/output/static/style.css
@@ -116,7 +116,7 @@ header label{
 
 .main .method{
     width:5rem;
-    display:inline-block,
+    display:inline-block;
     text-transform:uppercase;
 }
 
