--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header{
-    padding:0.5rem;
+    padding:.5rem;
     background:white;
     border-bottom:1px solid #eee;
     position:fixed;
@@ -18,8 +18,9 @@ header h1{
 }
 
 header .version{
-    margin-left:0.2rem;
+    margin-left:.2rem;
 }
+
 
 
 footer{
@@ -30,7 +31,7 @@ footer{
 }
 
 footer p{
-    margin:0rem 0rem 0.5rem 0rem;
+    margin:0rem 0rem .5rem 0rem;
     padding:0rem;
 }
 
@@ -47,6 +48,8 @@ footer .right{
 footer .clearfix{
     clear:both;
 }
+
+
 
 code, pre{
     border:1px solid #eee;
@@ -68,5 +71,13 @@ pre .keyword{
 
 #main article h3{
     padding:0rem;
-    margin:1.2rem 0rem 0.5rem 0rem;
+    margin:1.2rem 0rem .5rem 0rem;
+}
+
+
+@media (max-width:560px){
+    footer .right{
+        text-align:left;
+        float:left;
+    }
 }
