修正模板下的部样式表数值

--- a/output/static/style.css
+++ b/output/static/style.css
@@ -11,7 +11,7 @@ a{
 }
 
 p{
-    margin:0.5rem 0rem;
+    margin:.5rem 0rem;
 }
 
 ul{
@@ -51,7 +51,7 @@ header .title{
 }
 
 header .filter{
-    margin-top:0.8rem;
+    margin-top:.8rem;
 }
 
 header #groups{
@@ -103,7 +103,7 @@ header label{
 .main h4{
     margin-bottom:0rem;
     border-bottom:1px solid #eee;
-    padding-bottom:0.2rem;
+    padding-bottom:.2rem;
 }
 
 .main h5{
@@ -151,6 +151,6 @@ footer{
 }
 
 footer p{
-    margin:0.5rem;
+    margin:.5rem;
     padding:0px;
 }
