美化默认模板的样式

--- a/output/static/style.css
+++ b/output/static/style.css
@@ -46,13 +46,13 @@ header{
 
 }
 
-header .title{
+header h1{
     font-size:2rem;
     display:inline-block;
     margin:0rem;
 }
 
-header .title .version{
+header h1 .version{
     font-size:1rem;
 }
 
@@ -69,90 +69,98 @@ header .filter label{
     vertical-align: bottom;
 }
 
-/*=============== main ================*/
-
 .main{
     padding:0rem 2rem;
-    margin-top:8rem;
+    margin-top:5.5rem;
 }
 
-.main section{
+/*=============== .api ================*/
+
+.main .api{
     padding:1rem;
     margin:1rem 0rem;
     border:1px solid #eee;
 }
 
-.main h3{
+.api h3{
     cursor:pointer;
     margin:0rem;
 }
 
-.main h4{
-    margin-bottom:0rem;
+.api h4{
+    font-size:1.1rem;
+    margin-bottom:.2rem;
     border-bottom:1px solid #eee;
     padding-bottom:.2rem;
 }
 
-.main h5{
-    margin:1rem 0rem;
+.api h5{
+    margin:.8rem 0rem .2rem 0rem;
+    font-size:1rem;
 }
 
-.main h3 .method{
+.api h3 .method{
     width:5rem;
     font-weight:bold;
     display:inline-block;
     text-transform:uppercase;
 }
 
-.main h3 .get{
+.api h3 .get{
     color:green;
 }
 
-.main h3 .options{
+.api h3 .options{
     color:green;
 }
 
-.main h3 .delete{
+.api h3 .delete{
     color:red;
 }
 
-.main h3 .put,.main h3 .patch{
+.api h3 .put,.api h3 .patch{
     color:rgb(193,174,49);
 }
 
-.main h3 .post{
+.api h3 .post{
     color:rgb(240,114,11);
 }
 
-.main h3 .url{
+.api h3 .url{
     display:inline-block;
     margin-right:2rem;
 }
 
-.main .content{
+.api h4 .success{
+    color:green;
+    margin-right:1rem;
+}
+
+.api h4 .error{
+    color:green;
+    margin-right:1rem;
+}
+
+.api .content{
     display:none;
 }
 
-.main .header-key{
-    min-width:15rem;
-    display:inline-block;
-}
-
-.main .status-code{
-    min-width:6rem;
-    display:inline-block;
-}
-
-.main table{
+.api table{
     text-align:left;
     border-collapse:collapse;
+    border:1px solid #ddd;
 }
 
-.main table thead tr, .main table tbody tr:nth-child(even){
-    background:#ddd;
+.api table thead tr{
+    background:#eee;
 }
 
-.main table th, .main table td{
+.api table tr{
+    border-bottom:1px solid #ddd;
+    line-height:1.5rem;
+}
+
+.api table th, .api table td{
     padding:.3rem 1rem;
 }
 
