美化默认模板
调整部分因为 #8 原因造成的代码缩进；
突出显示部分参数名称中包含子元素的变量名；
在能联网的情况下，会调用 http://prismjs.com 的相关代码高亮插件
美化代码，未联网的情况下，则按照正常的 pre 标签显示。

close #8

--- a/output/static/style.css
+++ b/output/static/style.css
@@ -2,7 +2,7 @@
 
 /*============== reset =================*/
 body{
-    margin:0rem;
+    margin:0 auto;
 }
 
 a{
@@ -158,6 +158,10 @@ header .filter label{
 .api table tr{
     border-bottom:1px solid #ddd;
     line-height:1.5rem;
+}
+
+.api table tbody th .parent{
+    color:#ccc;
 }
 
 .api table th, .api table td{
