--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@ header{
     padding:.5rem;
     background:white;
     border-bottom:1px solid #eee;
-    position:fixed;
+    position:sticky; /* TODO: 暂时只有 Firefox 支持，其它浏览器通过 js 模拟 */;
     z-index:10;
     top:0;
-    left:0;
-    right:0;
+}
+
+.sticky{
+    top:0;
+    position:fixed;
+    box-sizing:border-box;
+    width:100%;
 }
 
 header .menu{
@@ -83,7 +88,7 @@ pre .bool{
 }
 
 #main{
-    margin-top:6.5rem;
+    margin-top:.5rem;
 }
 
 #main article{
