--- a/output/static/style.css
+++ b/output/static/style.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+:root {
+    --aside-width: 350px;
+    --aside-footer-height: 140px;
+    --aside-header-height: 80px;
+}
+
 /*============== reset =================*/
 body {
     margin: 0
@@ -14,34 +20,54 @@ a {
 
 aside {
     background: rgb(189,189,189);
-
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 350px;
+    width: var(--aside-width);
+    box-sizing: border-box;
 }
 
 aside header {
     padding: 1rem;
-    position: sticky;
-    position: -webkit-sticky;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: var(--aside-width);
+    height: var(--aside-header-height);
+    box-sizing: border-box;
 }
 
 aside menu {
+    box-sizing: border-box;
+    overflow-y:scroll;
+    position: absolute;
+    left: 0;
+    top: var(--aside-header-height);
+    bottom: var(--aside-footer-height);
+    width: var(--aside-width);
 }
 
 aside footer {
     padding: 1rem;
-    position: fixed;
+    position: -webkit-sticky;
+    position: absolute;
     bottom: 0;
     left: 0;
+    height: var(--aside-footer-height);
+    width: var(--aside-width);
+    box-sizing: border-box;
+}
+
+aside menu ul>li {
+    cursor: pointer;
+    line-height: 1.5;
 }
 
 /*=============== main ================*/
 
 main {
-    margin-left: 350px;
+    margin-left: var(--aside-width);
     padding: 1rem;
 }
 
