--- a/internal/html/apidoc.css
+++ b/internal/html/apidoc.css
@@ -34,6 +34,16 @@ table th, table td {
     border-bottom: 1px solid var(--border-color);
 }
 
+ul, ol {
+    padding: 0;
+    margin: 0;
+    list-style-position: inside;
+}
+
+p {
+    margin: 0;
+}
+
 /*************************** header ***********************/
 
 header h1 {
