[xsl] 为每一个 api 添加链接的锚点

--- a/internal/html/apidoc.css
+++ b/internal/html/apidoc.css
@@ -147,6 +147,10 @@ main .api summary .action {
     display: inline-block;
 }
 
+main .api summary .link {
+    margin-right: 10px;
+}
+
 main .api .description {
     padding:var(--article-padding);
     margin: 0;
