--- a/docs/apidoc.css
+++ b/docs/apidoc.css
@@ -47,6 +47,14 @@ p {
     margin: 0;
 }
 
+summary, input {
+    outline: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 /*************************** header ***********************/
 
 header {
